--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -74,6 +74,22 @@
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
+  /** lmlmn primary**/
+  --ion-color-lmlmn-primary: #268383;
+  --ion-color-lmlmn-primary-rgb: 38, 131, 131;
+  --ion-color-lmlmn-primary-contrast: #ffffff;
+  --ion-color-lmlmn-primary-contrast-rgb: 255, 255, 255;
+  --ion-color-lmlmn-primary-shade: #217373;
+  --ion-color-lmlmn-primary-tint: #3c8f8f;
+
+  /** lmlmn secondary **/
+  --ion-color-lmlmn-secondary: #D26173;
+  --ion-color-lmlmn-secondary-rgb: 210, 97, 115;
+  --ion-color-lmlmn-secondary-contrast: #ffffff;
+  --ion-color-lmlmn-secondary-contrast-rgb: 255, 255, 255;
+  --ion-color-lmlmn-secondary-shade: #b95565;
+  --ion-color-lmlmn-secondary-tint: #d77181;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -84,65 +100,65 @@
 
   body {
     --ion-color-primary: #428cff;
-    --ion-color-primary-rgb: 66,140,255;
+    --ion-color-primary-rgb: 66, 140, 255;
     --ion-color-primary-contrast: #ffffff;
-    --ion-color-primary-contrast-rgb: 255,255,255;
+    --ion-color-primary-contrast-rgb: 255, 255, 255;
     --ion-color-primary-shade: #3a7be0;
     --ion-color-primary-tint: #5598ff;
 
     --ion-color-secondary: #50c8ff;
-    --ion-color-secondary-rgb: 80,200,255;
+    --ion-color-secondary-rgb: 80, 200, 255;
     --ion-color-secondary-contrast: #ffffff;
-    --ion-color-secondary-contrast-rgb: 255,255,255;
+    --ion-color-secondary-contrast-rgb: 255, 255, 255;
     --ion-color-secondary-shade: #46b0e0;
     --ion-color-secondary-tint: #62ceff;
 
     --ion-color-tertiary: #6a64ff;
-    --ion-color-tertiary-rgb: 106,100,255;
+    --ion-color-tertiary-rgb: 106, 100, 255;
     --ion-color-tertiary-contrast: #ffffff;
-    --ion-color-tertiary-contrast-rgb: 255,255,255;
+    --ion-color-tertiary-contrast-rgb: 255, 255, 255;
     --ion-color-tertiary-shade: #5d58e0;
     --ion-color-tertiary-tint: #7974ff;
 
     --ion-color-success: #2fdf75;
-    --ion-color-success-rgb: 47,223,117;
+    --ion-color-success-rgb: 47, 223, 117;
     --ion-color-success-contrast: #000000;
-    --ion-color-success-contrast-rgb: 0,0,0;
+    --ion-color-success-contrast-rgb: 0, 0, 0;
     --ion-color-success-shade: #29c467;
     --ion-color-success-tint: #44e283;
 
     --ion-color-warning: #ffd534;
-    --ion-color-warning-rgb: 255,213,52;
+    --ion-color-warning-rgb: 255, 213, 52;
     --ion-color-warning-contrast: #000000;
-    --ion-color-warning-contrast-rgb: 0,0,0;
+    --ion-color-warning-contrast-rgb: 0, 0, 0;
     --ion-color-warning-shade: #e0bb2e;
     --ion-color-warning-tint: #ffd948;
 
     --ion-color-danger: #ff4961;
-    --ion-color-danger-rgb: 255,73,97;
+    --ion-color-danger-rgb: 255, 73, 97;
     --ion-color-danger-contrast: #ffffff;
-    --ion-color-danger-contrast-rgb: 255,255,255;
+    --ion-color-danger-contrast-rgb: 255, 255, 255;
     --ion-color-danger-shade: #e04055;
     --ion-color-danger-tint: #ff5b71;
 
     --ion-color-dark: #f4f5f8;
-    --ion-color-dark-rgb: 244,245,248;
+    --ion-color-dark-rgb: 244, 245, 248;
     --ion-color-dark-contrast: #000000;
-    --ion-color-dark-contrast-rgb: 0,0,0;
+    --ion-color-dark-contrast-rgb: 0, 0, 0;
     --ion-color-dark-shade: #d7d8da;
     --ion-color-dark-tint: #f5f6f9;
 
     --ion-color-medium: #989aa2;
-    --ion-color-medium-rgb: 152,154,162;
+    --ion-color-medium-rgb: 152, 154, 162;
     --ion-color-medium-contrast: #000000;
-    --ion-color-medium-contrast-rgb: 0,0,0;
+    --ion-color-medium-contrast-rgb: 0, 0, 0;
     --ion-color-medium-shade: #86888f;
     --ion-color-medium-tint: #a2a4ab;
 
     --ion-color-light: #222428;
-    --ion-color-light-rgb: 34,36,40;
+    --ion-color-light-rgb: 34, 36, 40;
     --ion-color-light-contrast: #ffffff;
-    --ion-color-light-contrast-rgb: 255,255,255;
+    --ion-color-light-contrast-rgb: 255, 255, 255;
     --ion-color-light-shade: #1e2023;
     --ion-color-light-tint: #383a3e;
   }
@@ -154,10 +170,10 @@
 
   .ios body {
     --ion-background-color: #000000;
-    --ion-background-color-rgb: 0,0,0;
+    --ion-background-color-rgb: 0, 0, 0;
 
     --ion-text-color: #ffffff;
-    --ion-text-color-rgb: 255,255,255;
+    --ion-text-color-rgb: 255, 255, 255;
 
     --ion-color-step-50: #0d0d0d;
     --ion-color-step-100: #1a1a1a;
@@ -198,10 +214,10 @@
 
   .md body {
     --ion-background-color: #121212;
-    --ion-background-color-rgb: 18,18,18;
+    --ion-background-color-rgb: 18, 18, 18;
 
     --ion-text-color: #ffffff;
-    --ion-text-color-rgb: 255,255,255;
+    --ion-text-color-rgb: 255, 255, 255;
 
     --ion-border-color: #222222;
 
@@ -233,4 +249,22 @@
 
     --ion-card-background: #1e1e1e;
   }
+}
+
+.ion-color-lmlmn-primary {
+  --ion-color-base: var(--ion-color-lmlmn-primary);
+  --ion-color-base-rgb: var(--ion-color-lmlmn-primary-rgb);
+  --ion-color-contrast: var(--ion-color-lmlmn-primary-contrast);
+  --ion-color-contrast-rgb: var(--ion-color-lmlmn-primary-contrast-rgb);
+  --ion-color-shade: var(--ion-color-lmlmn-primary-shade);
+  --ion-color-tint: var(--ion-color-lmlmn-primary-tint);
+}
+
+.ion-color-lmlmn-secondary {
+  --ion-color-base: var(--ion-color-lmlmn-secondary);
+  --ion-color-base-rgb: var(--ion-color-lmlmn-secondary-rgb);
+  --ion-color-contrast: var(--ion-color-lmlmn-secondary-contrast);
+  --ion-color-contrast-rgb: var(--ion-color-lmlmn-secondary-contrast-rgb);
+  --ion-color-shade: var(--ion-color-lmlmn-secondary-shade);
+  --ion-color-tint: var(--ion-color-lmlmn-secondary-tint);
 }
